@@ -21,7 +21,7 @@ BRANCH:		"The Gnomish Mines" @ (2, 3)
 BRANCH:		"Nowhere" @ (4, 0) portal
 LEVEL:		"oracle" "O" @ (5, 5)
 LEVALIGN:	neutral
-CHAINBRANCH:	"Sokoban" "oracle" + (1, 0) up
+CHAINBRANCH:	"Lokoban" "oracle" + (1, 0) up
 CHAINLEVEL:	"qstlb" "none" "oracle" + (6, 2)
 CHAINBRANCH:	"The Quest" "qstlb" + (0, 0) portal
 RNDLEVEL:	"bigrm" "B" @ (10, 10) 75 5
@@ -212,9 +212,9 @@ LEVEL:	"x-loca" "L" @ (3, 1)
 LEVEL:	"x-goal" "none" @ (-1, 0)
 
 #
-# Sokoban
+# Lokoban
 #
-DUNGEON:		"Sokoban" "none" (1, 0)
+DUNGEON:		"Lokoban" "none" (1, 0)
 DESCRIPTION:    mazelike
 ALIGNMENT:      neutral
 ENTRY:          -1
