@@ -1922,7 +1922,7 @@ NEARDATA struct permonst mons[] = {
     MON("Lokoban Pinata", S_UNICORN,//18 /* Needs encyc entry */
 	LVL(12, 0, 110, 0), (G_UNIQ|G_NOCORPSE|G_NOGEN), //needs quote
 	DEF(NAT_DR(10)),
-	A(NO_ATTK),
+	A(ATTK(AT_BOOM, AD_LOKO, 1, 3)),
 	SIZ(WT_LARGE, CN_LARGE, MS_SILENT, MZ_LARGE), MR_SICK|MR_POISON|MR_STONE|MR_SLEEP, 0,
 	MM_BREATHLESS /*MM*/, MT_HOSTILE|MT_MINDLESS /*MT*/, 0 /*MF*/,
 	MB_ANIMAL|MB_LONGHEAD|MB_STRONG|MB_NOHANDS /*MB*/, MG_NOWISH|MG_NOPOLY|MG_VBLUNT /*MG*/,
